2002-01-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/configure: Regen.
	* unix/configure.in:
	* win/configure: Regen.
	* win/configure.in: Use ${libdir} instead of ${exec_prefix}/lib
	to properly support the --libdir option to configure. [Bug 489370]

2002-01-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net> 

	* win/tclWinSerial.c (SerialSetOptionProc): Applied patch for SF
	  bug #500348 supplied by Rolf Schroedter
	  <schroedter@users.sourceforge.net>. The function modified the
	  contents of the the 'value' string and now does not do this
	  anymore. This is a followup to the change made on 2001-12-17.

2002-01-11  David Gravereaux <davygrvy@pobox.com>

	* win/makefile.vc: Removed -GD compiler option.  It was intended
	for future use, but MS is again changing the future at their whim.
	The D4002 warning was harmless though, but someone using VC .NET
	logged it as a concern.  [Bug #501565]

2002-01-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/Makefile.in: Burn Tcl build directory
	into tcltest executable to avoid crashes caused
	by ld loading a previously installed version
	of the tcl shared library. [Bug 218110]

2002-01-10  Don Porter <dgp@users.sourceforge.net>,
	Kevin Kenny <kennykb@users.sourceforge.net>
	
	* unix/tclLoadDld.c (TclpLoadFile):  syntax error: unbalanced
	parens.  Kevin notes that it's far from clear that this file is
	ever included in an actual build; Linux without dlopen appears to
	be a nonexistent configuration.
	
2002-01-08  Don Porter <dgp@users.sourceforge.net>,
	Kevin Kenny <kennykb@users.sourceforge.net>

	* doc/StaticPkg.3 (Tcl_StaticPackage):
	* generic/tcl.decls (Tcl_StaticPackage):
	* generic/tclDecls.h (Tcl_StaticPackage):
	* generic/tclInt.decls (TclGuessPackageName):
	* generic/tclInt.h (TclGuessPackageName):
	* generic/tclLoad.c (Tcl_StaticPackage):
	* generic/tclLoadNone.c (TclGuessPackageName):
	* mac/tclMacLoad.c (TclGuessPackageName):
	* unix/tclLoadAout.c (TclGuessPackageName):