@@ -4,7 +4,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: GetIndex.3,v 1.6 2000/07/24 00:03:02 jenglish Exp $
+'\" RCS: @(#) $Id: GetIndex.3,v 1.7 2002/01/14 15:07:39 dgp Exp $
 '\" 
 .so man.macros
 .TH Tcl_GetIndexFromObj 3 8.1 Tcl "Tcl Library Procedures"
@@ -25,7 +25,7 @@ int
 msg, flags, indexPtr\fR)
 .VE
 .SH ARGUMENTS
-.AS Tcl_Interp **tablePtr
+.AS "char * CONST" *tablePtr
 .AP Tcl_Interp *interp in
 Interpreter to use for error reporting; if NULL, then no message is
 provided on errors.
@@ -33,7 +33,7 @@ provided on errors.
 The string value of this object is used to search through \fItablePtr\fR.
 The internal representation is modified to hold the index of the matching
 table entry.
-.AP char **tablePtr in
+.AP "char * CONST" *tablePtr in
 An array of null-terminated strings.  The end of the array is marked
 by a NULL string pointer.
 .VS
@@ -41,7 +41,7 @@ by a NULL string pointer.
 The offset to add to tablePtr to get to the next string in the
 list. The end of the array is marked by a NULL string pointer.
 .VE
-.AP char *msg in
+.AP "CONST char" *msg in
 Null-terminated string describing what is being looked up, such as
 \fBoption\fR.  This string is included in error messages.
 .AP int flags in
